# ANN_Learning_Simulation

./: .gitignore  CMakeLists.txt  README.md  data_loader  data_loader.cpp
src/: main.cpp  networkdraw.cpp  networkdraw.h
src/gui/: draw.cpp  draw.h  gui_panel.h
src/math/: functions.h  matrix.h  matrix_linalg.h  tensor_math  tensor_math.cpp  tensor_math.h
src/nn/: activation_func.h  callbacks.h  cost_func.h  layers.h  model.h  ops.h  optimizer.h
src/utils/: asserts.h  data_loader.cpp  data_loader.h  encoding.h  split_shuffle.h
tests/: test_cost_func.cpp  test_dense_layer.cpp  test_dense_math.cpp  test_math_tensor.cpp  test_matmul.cpp  test_model_lregression.cpp  test_sequential.cpp  test_tensor.cpp  test_utils.h
